<resources>
    <string name="app_name">Event Manager</string>
    <string name="title_activity_manager_login">Log in</string>
    <string name="login_manager">Login as Manager</string>
    <string name="login_guest">Login as Guest</string>
    <string name="login_enter_managerid">Enter Manager ID</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_failed">"Login failed! Check your ID and password and try again."</string>
    <string name="login_successful">Login successful!</string>
    <string name="title_activity_guest">Welcome!</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_events">Events</string>
    <string name="title_speakers">Speakers</string>
    <string name="text_home">Welcome! Choose what you want to see!</string>
    <string name="title_activity_manager">Welcome!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="database_access_fail">Error! Failed to access the database.</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="event_id">Event ID</string>
    <string name="speaker_details">Speaker Details</string>
    <string name="add_event">Add Event</string>
    <string name="create_event">Create Event</string>
    <string name="event_created">Event Created!</string>
    <string name="create_event_error">Error! No fields can be left empty. Enter values in all the fields and try again.</string>
    <string name="event_date_format_error">Error! Incorrect date. Please use dd/mm/yyyy</string>
    <string name="event_time_format_error">Error! Incorrect time. Please use the 24-hour format hhmm.</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_prompt">Are you sure you want to delete the event?</string>
    <string name="alert">Alert</string>
    <string name="volunteers">Volunteers</string>
    <string name="add_volunteer">Add Volunteer</string>
    <string name="delete_volunteer">Delete Volunteer</string>
    <string name="delete_volunteer_prompt">Are you sure you want to delete the volunteer?</string>
    <string name="volunteer_name">Volunteer name</string>
    <string name="create_volunteer">Create Volunteer</string>
</resources>
