<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventmanager.activities.GuestActivity">

    <TextView
        android:id="@+id/guest_home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_home"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingBottom="40dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/layout_guest_home_events"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/layout_guest_home_schedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button_home_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/title_events"
            android:onClick="onClickGuestHomeButton"
            style="@style/ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/layout_guest_home_schedule"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/layout_guest_home_speakers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button_home_schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/title_schedule"
            android:onClick="onClickGuestHomeButton"
            style="@style/ButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/layout_guest_home_speakers"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/guest_home_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button_home_speakers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/title_speakers"
            android:onClick="onClickGuestHomeButton"
            style="@style/ButtonStyle" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
